# blog

./: .gitignore  CNAME  Makefile  Taskfile.yaml  _config.yml  pyproject.toml
.github/workflows/: pages-deploy.yml
_data/: contact.yml  share.yml
_posts/: 2024-03-19-single-aws-account-environments.md  2024-03-19-terraform-multiple-environments.md  2024-04-12-docker-on-raspberry-pi.md  2025-05-01-introducing-grammr.md  2025-05-01-raspberry-pi-kubernetes.md  2025-10-27-terraform-state-migration.md  2025-12-02-aws-multiple-environments.md  2026-03-04-introducing-grammr.md  2026-03-05-introducing-grammr.md  2026-05-15-photography-blog.md  draft-2024-03-21-python-for-java-developers.md  draft-2024-04-04-dependency-injection-in-python.md  draft-2025-03-19-kubernetes-debugging.md  draft-2025-04-02-introducing-grammr.md  draft-2025-05-01-raspberry-pi-kubernetes.md  draft-2025-08-01-homelab-learnings.md  draft-2025-10-27-terraform-multiple-environments.md  draft-error-correcting-checksums.md  idea-2024-04-15-mood-tracker-learnings.md  idea-does-your-code-spark-joy.md
_posts/_drafts/: 2026-02-10-introducing-grammr.md
_tabs/: about.md  projects.md
