[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Tobias Waslowski <tobias.waslowski@thoughtworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
kink = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
